# pubg-leaderboard

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  app.yaml  config.py  ingress.yaml  job-k8s.yaml  job.py  leaderboards.json  models.py  players.json  pyproject.toml  redis-cli.sh  run.sh  setup.md  todo.md
infra/: app.yaml  cronjob.yaml  ingress-monitoring.yaml  initial-job.yaml  job-k8s.yaml  monitoring.yaml  namespace.yaml  redis-config.yaml  sa.yaml
infra/values/: grafana.yaml  prom.yaml  redis.yaml
pubg/: app.py  config.py  job.py  models.py
